Fix scaling down image with 1px grid spacing

Scaling the image scales the grid along with it. If the scale
was less than 50%, 1px grid spacing would be rounded down to 0,
causing modulo by zero, or triggering an infinite loop warning in
KisGridDecoration::drawDecoration (since effectiveSize == 0).
So make sure the minimum spacing after transform is 1px.

BUG:490898